completo-hasta-respuesta-audio-ok

--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@builderbot/bot": "^1.0.0",
     "@builderbot/provider-baileys": "^1.0.0",
     "@supabase/supabase-js": "^2.39.3",
+    "@whiskeysockets/baileys": "^6.5.0",
     "dotenv": "^16.4.1",
     "openai": "^4.85.4",
     "optional": "^0.1.4",
     "paquete": "^1.0.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "@google-cloud/text-to-speech": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
