--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node src/app.js",
     "lint": "eslint src/**/*.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm install --os=win32 --cpu=x64 sharp"
+    "postinstall": "npm install --os=win32 --cpu=x64 sharp",
+    "crud": "node pruebaCrud/server.js"
   },
   "keywords": [
     "whatsapp",
@@ -22,14 +23,15 @@
   "dependencies": {
     "@builderbot/bot": "^1.0.0",
     "@builderbot/provider-baileys": "^1.0.0",
+    "@google-cloud/text-to-speech": "^5.0.1",
     "@supabase/supabase-js": "^2.39.3",
     "@whiskeysockets/baileys": "^6.5.0",
     "dotenv": "^16.4.1",
     "openai": "^4.85.4",
     "optional": "^0.1.4",
     "paquete": "^1.0.0",
-    "sharp": "^0.33.5",
-    "@google-cloud/text-to-speech": "^5.0.1"
+    "express": "^4.18.2",
+    "ejs": "^3.1.9"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
