--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,23 @@
-dist/*
-node_modules
+# Credenciales y configuración
+/apigoogle/*.json
 .env
 
+# Dependencias
+/node_modules
+/tmp
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Archivos del sistema
+.DS_Store
+Thumbs.db
+
+dist/*
 *_sessions
 *tokens
 .wwebjs*
-
-*.log
 *qr.png
